[workspace]
resolver = "3"
members = [
    "yuri",
    "yuri-cli",
    "yuri-common",
    "yuri-lexer",
    "yuri-ast",
    "yuri-parser",
    "yuri-compiler",
    "yuri-codegen"
, "yuri-hir"]
default-members = [
    "yuri",
    "yuri-cli"
]

[workspace.dependencies]
log = "0.4.28"
# lexing
memchr = "2.7.6"
unicode-xid = "0.2.6"
unicode-normalization = "0.1.25"
# math
nalgebra = "0.34.1"
# efficiency
rayon = "1.11.0"
rustc-hash = "2.1.1"
smallvec = "1.15.1"
thin-vec = "0.2.14"
# codegen
rspirv = { version = "0.12.0", default-features = false }
