[package]
name = "yuri-cli"
version = "0.0.0-alpha.park"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "yuri"
path = "src/yuri.rs"

[dependencies]
yuri = { path = "../yuri", version = "0.0.0-alpha.park" }
log = "0.4.28"
env_logger = "0.11.8"
rayon = "1.11.0"
clap = { version = "4.5.50" }
clap_complete = { version = "4.5.59" }
