[package]
name = "yuri-compiler"
version = "0.0.0-alpha.indev.1"
edition = "2024"
homepage = "https://yuri-lang.dev"
license = "Apache-2.0"

[dependencies]
yuri-common = { path = "../yuri-common" }
yuri-parser = { path = "../yuri-parser" }
yuri-ast = { path = "../yuri-ast" }
yuri-hir = { path = "../yuri-hir" }

[dev-dependencies]
yuri-lexer = { path = "../yuri-lexer" }
