[package]
name = "yuri-parser"
version = "0.0.0-alpha.indev.1"
edition = "2024"
homepage = "https://yuri-lang.dev"
license = "Apache-2.0"

[dependencies]
yuri-common = { path = "../yuri-common" }
yuri-ast = { path = "../yuri-ast" }
yuri-lexer = { path = "../yuri-lexer" }
unicode-xid = { workspace = true }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
thin-vec = { workspace = true }
