[package]
name = "yuri-lang"
version = "0.0.0-alpha.park"
license = "Apache-2.0"
readme = "README.md"
repository = "https://git.gay/yuri/yuri"
homepage = "https://yuri-lang.dev"
description = "Compiler for the Yuri shader language."
categories = ["compilers", "parser-implementations", "graphics"]
keywords = ["graphics"]
edition = "2024"

[lib]
name = "yuri"

[dependencies]
nalgebra = "0.34.1"
log = "0.4.28"
rayon = "1.11.0"
# tree-sitter = "0.25.10"
# tree-sitter-yuri = { git = "https://git.gay/yuri/tree-sitter-yuri"}
rspirv = { version = "0.12.0", default-features = false }
