[package]
name = "yuri-lang"
version = "0.0.0-alpha.indev.1"
edition = "2024"
homepage = "https://yuri-lang.dev"
license = "Apache-2.0"
readme = "README.md"
repository = "https://git.gay/yuri/yuri"
description = "Compiler for the Yuri shader language."
categories = ["compilers", "parser-implementations", "graphics"]
keywords = ["graphics"]

[lib]
name = "yuri"

[dependencies]
yuri-common = { path = "../yuri-common" }
yuri-lexer = { path = "../yuri-lexer" }
yuri-parser = { path = "../yuri-parser" }
yuri-compiler = { path = "../yuri-compiler" }

log = { workspace = true, optional = true }
rayon = { workspace = true }
# thin-vec = "0.2.14"
# tree-sitter = "0.25.10"
# tree-sitter-yuri = { git = "https://git.gay/yuri/tree-sitter-yuri"}

[features]
default = ["log"]
log = ["dep:log"]
